added rule to eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": "next/core-web-vitals",
 	"rules": {
-		"react/no-unescape-entities": 0
+		"react/no-unescape-entities": "off"
 	}
 }
