--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@uploadthing/react": "^6.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.3.17",
@@ -17,8 +19,11 @@
 		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-dropzone": "^14.2.3",
 		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^6.13.2",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
