--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.17.0",
 		"@radix-ui/react-progress": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
@@ -19,6 +20,7 @@
 		"lucide-react": "^0.412.0",
 		"next": "14.2.5",
 		"next-themes": "^0.3.0",
+		"prisma": "^5.17.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
