--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
+		"server-only": "^0.0.1",
+		"sharp": "^0.32.6",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
