--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.1.2",
 		"@prisma/client": "^5.17.0",
+		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-progress": "^1.1.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
 		"@uploadthing/react": "^6.7.2",
@@ -24,6 +29,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
+		"react-rnd": "^10.4.11",
 		"server-only": "^0.0.1",
 		"sharp": "^0.32.6",
 		"sonner": "^1.5.0",
