--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"framer-motion": "^11.3.17",
 		"lucide-react": "^0.412.0",
 		"next": "14.2.5",
+		"next-auth": "^4.24.7",
 		"next-themes": "^0.3.0",
 		"prisma": "^5.17.0",
 		"react": "^18",
