--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"server-only": "^0.0.1",
 		"sharp": "^0.32.6",
 		"sonner": "^1.5.0",
+		"stripe": "^16.6.0",
 		"tailwind-merge": "^2.4.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.13.2",
