--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@headlessui/react": "^2.1.2",
 		"@prisma/client": "^5.17.0",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-progress": "^1.1.0",
@@ -31,6 +32,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-dropzone": "^14.2.3",
+		"react-google-button": "^0.8.0",
 		"react-rnd": "^10.4.11",
 		"server-only": "^0.0.1",
 		"sharp": "^0.32.6",
