Added dashboard page and components. Added email sent to customer when order is placed

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
+		"@react-email/components": "^0.0.22",
 		"@tanstack/react-query": "^5.51.15",
 		"@uploadthing/react": "^6.7.2",
 		"class-variance-authority": "^0.7.0",
@@ -34,6 +35,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-google-button": "^0.8.0",
 		"react-rnd": "^10.4.11",
+		"resend": "^3.5.0",
 		"server-only": "^0.0.1",
 		"sharp": "^0.32.6",
 		"sonner": "^1.5.0",
